# nextjs-fastapi

./: .gitignore  LICENSE  README.md
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024-04-22_1708-fc342c4f4ce1_add_item.py
backend/app/: base.py  config.py  database.py  main.py
backend/app/api/: middleware.py
backend/app/api/routers/: item.py
backend/app/config/: settings.development.toml  settings.test.toml
backend/app/db/: base_dao.py  database.py
backend/app/db/dao/: item_dao.py
backend/app/db/orm/: base_orm.py  item_orm.py
backend/app/db/service/: item_service.py
backend/app/entities/: base.py  item.py
backend/app/tests/: conftest.py  dao_test.py
backend/app/tests/db/dao/: test_item_dao.py
backend/tests/: conftest.py
backend/tests/db/dao/: test_item_dao.py
backend/tests/utils/fixtures/: item_conftest.py
docker/: docker-compose-debug.yml  docker-compose-frontend.yml  docker-compose.yml
frontend/: .prettierignore  .prettierrc  Dockerfile  package-lock.json  package.json
frontend/src/app/items/: layout.tsx  page.tsx
frontend/src/services/: apiRequest.ts  itemService.ts
